Your commit message

--- a/calendersymbol.html
+++ b/calendersymbol.html
@@ -26,5 +26,6 @@ var calendar = new ej.calendars.Calendar();
 // Render the initialized button.
 calendar.appendTo('#element')
 </script>
+<!-- fhgsjadlk -->
 </body>
 </html>
